deploy/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: teb
  labels:
    app: teb
spec:
  type: ClusterIP
  selector:
    app: teb
  ports:
    - port: 80
      targetPort: 8000
      protocol: TCP
      name: http
